--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port $PORT"
+    "preview": "vite preview --port $PORT --host"
   },
   "dependencies": {
     "react": "^19.1.0",
